--- a/test_products.ipynb
+++ b/test_products.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.175390Z",
-     "start_time": "2025-11-22T04:03:33.937950Z"
+     "end_time": "2025-11-22T04:05:57.227975Z",
+     "start_time": "2025-11-22T04:05:57.015292Z"
     }
    },
    "source": "import pandas as pd",
@@ -17,8 +17,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.181934Z",
-     "start_time": "2025-11-22T04:03:34.179656Z"
+     "end_time": "2025-11-22T04:05:57.233406Z",
+     "start_time": "2025-11-22T04:05:57.231504Z"
     }
    },
    "cell_type": "code",
@@ -38,8 +38,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.201946Z",
-     "start_time": "2025-11-22T04:03:34.188189Z"
+     "end_time": "2025-11-22T04:05:57.247793Z",
+     "start_time": "2025-11-22T04:05:57.237160Z"
     }
    },
    "cell_type": "code",
@@ -150,8 +150,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.236597Z",
-     "start_time": "2025-11-22T04:03:34.231910Z"
+     "end_time": "2025-11-22T04:05:57.275436Z",
+     "start_time": "2025-11-22T04:05:57.271021Z"
     }
    },
    "cell_type": "code",
@@ -161,7 +161,7 @@
     "\n",
     "new_df = pd.DataFrame({\n",
     "    \"fdc_id\": merged_df[\"fdc_id\"],\n",
-    "    \"description\": merged_df[\"mapped_ingredient\"],\n",
+    "    \"description\": merged_df[\"description\"],\n",
     "    \"pred\": pred_sets,\n",
     "    \"test\": test_sets,\n",
     "})\n",
@@ -172,18 +172,31 @@
     {
      "data": {
       "text/plain": [
-       "     fdc_id       description            pred                test\n",
-       "0    167512     \"biscuit mix\"     biscuit mix  buttermilk biscuit\n",
-       "1    167513   \"cinnamon roll\"   cinnamon roll       cinnamon roll\n",
-       "2    167514      \"breadcrumb\"      breadcrumb         bread crumb\n",
-       "3    167515  \"english muffin\"  english muffin      english muffin\n",
-       "4    167516      \"buttermilk\"      buttermilk   buttermilk waffle\n",
-       "..      ...               ...             ...                 ...\n",
-       "295  167807    \"cherry juice\"    cherry juice        cherry juice\n",
-       "296  167808       \"raspberry\"       raspberry     raspberry puree\n",
-       "297  167809       \"raspberry\"       raspberry     raspberry puree\n",
-       "298  167810            \"pork\"            pork                pork\n",
-       "299  167811            \"pork\"            pork                pork\n",
+       "     fdc_id                                        description  \\\n",
+       "0    167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...   \n",
+       "1    167513  Pillsbury, Cinnamon Rolls with Icing, refriger...   \n",
+       "2    167514  Kraft Foods, Shake N Bake Original Recipe, Coa...   \n",
+       "3    167515     George Weston Bakeries, Thomas English Muffins   \n",
+       "4    167516         Waffles, buttermilk, frozen, ready-to-heat   \n",
+       "..      ...                                                ...   \n",
+       "295  167807                                 Cherry juice, tart   \n",
+       "296  167808                       Raspberries, puree, seedless   \n",
+       "297  167809                     Raspberries, puree, with seeds   \n",
+       "298  167810  Pork, fresh, composite of trimmed leg, loin, s...   \n",
+       "299  167811                          Pork, fresh, backfat, raw   \n",
+       "\n",
+       "               pred                test  \n",
+       "0       biscuit mix  buttermilk biscuit  \n",
+       "1     cinnamon roll       cinnamon roll  \n",
+       "2        breadcrumb         bread crumb  \n",
+       "3    english muffin      english muffin  \n",
+       "4        buttermilk   buttermilk waffle  \n",
+       "..              ...                 ...  \n",
+       "295    cherry juice        cherry juice  \n",
+       "296       raspberry     raspberry puree  \n",
+       "297       raspberry     raspberry puree  \n",
+       "298            pork                pork  \n",
+       "299            pork                pork  \n",
        "\n",
        "[300 rows x 4 columns]"
       ],
@@ -216,35 +229,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>167512</td>\n",
-       "      <td>\"biscuit mix\"</td>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
        "      <td>biscuit mix</td>\n",
        "      <td>buttermilk biscuit</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
-       "      <td>\"cinnamon roll\"</td>\n",
+       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
        "      <td>cinnamon roll</td>\n",
        "      <td>cinnamon roll</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
-       "      <td>\"breadcrumb\"</td>\n",
+       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
        "      <td>breadcrumb</td>\n",
        "      <td>bread crumb</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>167515</td>\n",
-       "      <td>\"english muffin\"</td>\n",
+       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
        "      <td>english muffin</td>\n",
        "      <td>english muffin</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>167516</td>\n",
-       "      <td>\"buttermilk\"</td>\n",
+       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
        "      <td>buttermilk</td>\n",
        "      <td>buttermilk waffle</td>\n",
        "    </tr>\n",
@@ -258,35 +271,35 @@
        "    <tr>\n",
        "      <th>295</th>\n",
        "      <td>167807</td>\n",
-       "      <td>\"cherry juice\"</td>\n",
+       "      <td>Cherry juice, tart</td>\n",
        "      <td>cherry juice</td>\n",
        "      <td>cherry juice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>296</th>\n",
        "      <td>167808</td>\n",
-       "      <td>\"raspberry\"</td>\n",
+       "      <td>Raspberries, puree, seedless</td>\n",
        "      <td>raspberry</td>\n",
        "      <td>raspberry puree</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>297</th>\n",
        "      <td>167809</td>\n",
-       "      <td>\"raspberry\"</td>\n",
+       "      <td>Raspberries, puree, with seeds</td>\n",
        "      <td>raspberry</td>\n",
        "      <td>raspberry puree</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>298</th>\n",
        "      <td>167810</td>\n",
-       "      <td>\"pork\"</td>\n",
+       "      <td>Pork, fresh, composite of trimmed leg, loin, s...</td>\n",
        "      <td>pork</td>\n",
        "      <td>pork</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>299</th>\n",
        "      <td>167811</td>\n",
-       "      <td>\"pork\"</td>\n",
+       "      <td>Pork, fresh, backfat, raw</td>\n",
        "      <td>pork</td>\n",
        "      <td>pork</td>\n",
        "    </tr>\n",
@@ -306,8 +319,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.322250Z",
-     "start_time": "2025-11-22T04:03:34.319335Z"
+     "end_time": "2025-11-22T04:05:57.354348Z",
+     "start_time": "2025-11-22T04:05:57.352562Z"
     }
    },
    "cell_type": "code",
@@ -327,8 +340,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.353553Z",
-     "start_time": "2025-11-22T04:03:34.349776Z"
+     "end_time": "2025-11-22T04:05:57.370211Z",
+     "start_time": "2025-11-22T04:05:57.367036Z"
     }
    },
    "cell_type": "code",
@@ -340,44 +353,44 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.413838Z",
-     "start_time": "2025-11-22T04:03:34.409714Z"
+     "end_time": "2025-11-22T04:07:35.179437Z",
+     "start_time": "2025-11-22T04:07:35.174793Z"
     }
    },
    "cell_type": "code",
-   "source": "new_df.head(100)",
+   "source": "new_df.head(300)",
    "id": "41631d2d2104c6c7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "    fdc_id          description               pred                test  \\\n",
-       "0   167512        \"biscuit mix\"        biscuit mix  buttermilk biscuit   \n",
-       "1   167513      \"cinnamon roll\"      cinnamon roll       cinnamon roll   \n",
-       "2   167514         \"breadcrumb\"         breadcrumb         bread crumb   \n",
-       "3   167515     \"english muffin\"     english muffin      english muffin   \n",
-       "4   167516         \"buttermilk\"         buttermilk   buttermilk waffle   \n",
-       "..     ...                  ...                ...                 ...   \n",
-       "95  167607           \"raw meat\"           raw meat               moose   \n",
-       "96  167608         \"mashu root\"         mashu root          mashu root   \n",
-       "97  167609              \"liver\"              liver         moose liver   \n",
-       "98  167610  \"bearded seal meat\"  bearded seal meat                seal   \n",
-       "99  167611   \"bearded seal oil\"   bearded seal oil            seal oil   \n",
+       "     fdc_id                                        description  \\\n",
+       "0    167512  Pillsbury Golden Layer Buttermilk Biscuits, Ar...   \n",
+       "1    167513  Pillsbury, Cinnamon Rolls with Icing, refriger...   \n",
+       "2    167514  Kraft Foods, Shake N Bake Original Recipe, Coa...   \n",
+       "3    167515     George Weston Bakeries, Thomas English Muffins   \n",
+       "4    167516         Waffles, buttermilk, frozen, ready-to-heat   \n",
+       "..      ...                                                ...   \n",
+       "295  167807                                 Cherry juice, tart   \n",
+       "296  167808                       Raspberries, puree, seedless   \n",
+       "297  167809                     Raspberries, puree, with seeds   \n",
+       "298  167810  Pork, fresh, composite of trimmed leg, loin, s...   \n",
+       "299  167811                          Pork, fresh, backfat, raw   \n",
        "\n",
-       "    accuracy  \n",
-       "0          0  \n",
-       "1          1  \n",
-       "2          0  \n",
-       "3          1  \n",
-       "4          0  \n",
-       "..       ...  \n",
-       "95         0  \n",
-       "96         1  \n",
-       "97         0  \n",
-       "98         0  \n",
-       "99         0  \n",
+       "               pred                test  accuracy  \n",
+       "0       biscuit mix  buttermilk biscuit         0  \n",
+       "1     cinnamon roll       cinnamon roll         1  \n",
+       "2        breadcrumb         bread crumb         0  \n",
+       "3    english muffin      english muffin         1  \n",
+       "4        buttermilk   buttermilk waffle         0  \n",
+       "..              ...                 ...       ...  \n",
+       "295    cherry juice        cherry juice         1  \n",
+       "296       raspberry     raspberry puree         0  \n",
+       "297       raspberry     raspberry puree         0  \n",
+       "298            pork                pork         1  \n",
+       "299            pork                pork         1  \n",
        "\n",
-       "[100 rows x 5 columns]"
+       "[300 rows x 5 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -409,7 +422,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>167512</td>\n",
-       "      <td>\"biscuit mix\"</td>\n",
+       "      <td>Pillsbury Golden Layer Buttermilk Biscuits, Ar...</td>\n",
        "      <td>biscuit mix</td>\n",
        "      <td>buttermilk biscuit</td>\n",
        "      <td>0</td>\n",
@@ -417,7 +430,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>167513</td>\n",
-       "      <td>\"cinnamon roll\"</td>\n",
+       "      <td>Pillsbury, Cinnamon Rolls with Icing, refriger...</td>\n",
        "      <td>cinnamon roll</td>\n",
        "      <td>cinnamon roll</td>\n",
        "      <td>1</td>\n",
@@ -425,7 +438,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>167514</td>\n",
-       "      <td>\"breadcrumb\"</td>\n",
+       "      <td>Kraft Foods, Shake N Bake Original Recipe, Coa...</td>\n",
        "      <td>breadcrumb</td>\n",
        "      <td>bread crumb</td>\n",
        "      <td>0</td>\n",
@@ -433,7 +446,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>167515</td>\n",
-       "      <td>\"english muffin\"</td>\n",
+       "      <td>George Weston Bakeries, Thomas English Muffins</td>\n",
        "      <td>english muffin</td>\n",
        "      <td>english muffin</td>\n",
        "      <td>1</td>\n",
@@ -441,7 +454,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>167516</td>\n",
-       "      <td>\"buttermilk\"</td>\n",
+       "      <td>Waffles, buttermilk, frozen, ready-to-heat</td>\n",
        "      <td>buttermilk</td>\n",
        "      <td>buttermilk waffle</td>\n",
        "      <td>0</td>\n",
@@ -455,63 +468,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>167607</td>\n",
-       "      <td>\"raw meat\"</td>\n",
-       "      <td>raw meat</td>\n",
-       "      <td>moose</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>167608</td>\n",
-       "      <td>\"mashu root\"</td>\n",
-       "      <td>mashu root</td>\n",
-       "      <td>mashu root</td>\n",
+       "      <th>295</th>\n",
+       "      <td>167807</td>\n",
+       "      <td>Cherry juice, tart</td>\n",
+       "      <td>cherry juice</td>\n",
+       "      <td>cherry juice</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>167609</td>\n",
-       "      <td>\"liver\"</td>\n",
-       "      <td>liver</td>\n",
-       "      <td>moose liver</td>\n",
+       "      <th>296</th>\n",
+       "      <td>167808</td>\n",
+       "      <td>Raspberries, puree, seedless</td>\n",
+       "      <td>raspberry</td>\n",
+       "      <td>raspberry puree</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>167610</td>\n",
-       "      <td>\"bearded seal meat\"</td>\n",
-       "      <td>bearded seal meat</td>\n",
-       "      <td>seal</td>\n",
+       "      <th>297</th>\n",
+       "      <td>167809</td>\n",
+       "      <td>Raspberries, puree, with seeds</td>\n",
+       "      <td>raspberry</td>\n",
+       "      <td>raspberry puree</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>167611</td>\n",
-       "      <td>\"bearded seal oil\"</td>\n",
-       "      <td>bearded seal oil</td>\n",
-       "      <td>seal oil</td>\n",
-       "      <td>0</td>\n",
+       "      <th>298</th>\n",
+       "      <td>167810</td>\n",
+       "      <td>Pork, fresh, composite of trimmed leg, loin, s...</td>\n",
+       "      <td>pork</td>\n",
+       "      <td>pork</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>299</th>\n",
+       "      <td>167811</td>\n",
+       "      <td>Pork, fresh, backfat, raw</td>\n",
+       "      <td>pork</td>\n",
+       "      <td>pork</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 5 columns</p>\n",
+       "<p>300 rows × 5 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.475974Z",
-     "start_time": "2025-11-22T04:03:34.474021Z"
+     "end_time": "2025-11-22T04:05:57.483395Z",
+     "start_time": "2025-11-22T04:05:57.481596Z"
     }
    },
    "cell_type": "code",
@@ -531,8 +544,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.498559Z",
-     "start_time": "2025-11-22T04:03:34.496355Z"
+     "end_time": "2025-11-22T04:05:57.506803Z",
+     "start_time": "2025-11-22T04:05:57.504221Z"
     }
    },
    "cell_type": "code",
@@ -555,8 +568,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T04:03:34.556962Z",
-     "start_time": "2025-11-22T04:03:34.555847Z"
+     "end_time": "2025-11-22T04:05:57.535519Z",
+     "start_time": "2025-11-22T04:05:57.534374Z"
     }
    },
    "cell_type": "code",
